--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,6 +64,8 @@
         --border: 240 3.7% 15.9%;
         --input: 240 3.7% 15.9%;
         --ring: 240 4.9% 83.9%;
+
+        --theme-color-title: hsl(205, 84%, 27%);
     }
 }
 
