chore: update VSCode settings and adjust CSS theme variables for borders and rings

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,9 +31,10 @@
 
         --border: 240 5.9% 90%;
         --input: 240 5.9% 90%;
-        --ring: 240 10% 3.9%;
+        /* --ring: 240 10% 3.9%; */
+        --ring: 196, 83%, 55%;
 
-        --radius: 0.5rem;
+        --radius: 1.00rem;
     }
 
     .dark {
@@ -63,7 +64,8 @@
 
         --border: 240 3.7% 15.9%;
         --input: 240 3.7% 15.9%;
-        --ring: 240 4.9% 83.9%;
+        /* --ring: 240 4.9% 83.9%; */
+        --ring: 198, 60%, 35%;
 
         --theme-color-title: hsl(205, 84%, 27%);
     }
